# Amoura_BackEnd

./: .gitignore  README.md  pyproject.toml  requirements.txt  send_test_email.py
app/: database.py  main.py
app/core/: auth.py  config.py  email_client.py  storage_utils.py  supabase_client.py
app/models/: cart.py  order.py  product.py  user.py
app/repositories/: cart_repo.py  order_repo.py  product_repo.py  stats_repo.py  user_repo.py
app/routers/: admin_stats.py  cart.py  orders.py  products.py  users.py
app/schemas/: cart.py  order.py  product.py  stats.py  user.py
app/services/: cart_service.py  order_service.py  product_service.py  stats_service.py  user_service.py
test/: test_main.http
