[project]
name = "amoura-backend"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.13"
dependencies = [
    "black>=25.11.0",
    "fastapi[standard]",
    "psycopg>=3.2.13",
    "psycopg-binary==3.2.13",
    "psycopg2-binary>=2.9.11",
    "pydantic-settings>=2.12.0",
    "python-jose>=3.5.0",
    "sqlmodel>=0.0.27",
    "supabase>=2.24.0",
    "uvicorn>=0.38.0",
]
